--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,9 +6,7 @@ description: >
 minima:
   date_format: "%b %-d, %Y"
   social_links:
-    - { platform: devto,          user_url: "https://dev.to/jekyll" }
-    - { platform: twitter,        user_url: "https://twitter.com/mwenge" }
-    - { platform: github,         user_url: "https://github.com/mwenge/iatheory" }
+    - { platform: github, user_url: "https://twitter.com/mwenge" }
     
 plugins:
   - jekyll-feed
