--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,12 +3,16 @@ title: Iridis Alpha Theory
 description: >
   It's not really a theory.
 
+minima:
+  date_format: "%b %-d, %Y"
+  social_links:
+    github:  mwenge
+    twitter: mwenge
+    mastodon:
+    - username: mwenge
+      instance: mastodon.social
+    
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
-minima:
-  date_format: "%b %-d, %Y"
-  social_links:
-    - { platform: github, user_url: "https://twitter.com/mwenge" }
-    
